# youtube-analytics-project

./: pyproject.toml
.run/: Template Python.run.xml
homework-1/: main.py
homework-2/: main.py  moscowpython.json
homework-3/: main.py
homework-5/: main.py
homework-6/: main.py
src/: channel.py  playlist.py  video.py
